--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
+    "emotion": "^10.0.17",
     "lodash-es": "^4.17.15",
     "moment": "^2.24.0"
   }
